--- a/MittProjekt.html
+++ b/MittProjekt.html
@@ -15,7 +15,7 @@
         <div class="header"> 
             <div class="header-content">
                 <div id="h1Text">
-                    <h1><p>Photos of penguines</p></h1>
+                    <h1><p>Albert Dros</p></h1>
                 </div>
             </div>  
             <div class="header-bottom">
@@ -32,17 +32,17 @@
 
         <div id="body">
             <br/>
-            <div class="middle-content">
+            <div class="middle-container">
                 <div class="flexbox-middle">
-                    <div class="box box1">1</div>
-                    <div class="box box2">2</div>
-                    <div class="box box3">3</div>
-                    <div class="box box4">4</div>
+                    <div class="box box1"><img src="Bilder/penguin1.jpg"></div>
+                    <div class="box box2"><img src="Bilder/penguin2.jpg"></div>
+                    <div class="box box3"><img src="Bilder/penguin3.jpg"></div>
+                    <div class="box box4"><img src="Bilder/penguin4.jpg"></div>
                     <!--<div class="box box5">5</div>
                     <div class="box box6">6</div>
                     <div class="box box7">7</div>
                     <div class="box box8">8</div>
-                    <div class="box box9">9</div>--> 
+                    <div class="box box9">9</div>-->
                 </div>
             </div>
             <br/>
