Uppdaterar med fler bilder och lite fix i CSS

--- a/MittProjekt.html
+++ b/MittProjekt.html
@@ -20,9 +20,9 @@
             </div>  
             <div class="header-bottom">
                 <div class="header-menu">
-                    <div class="menu header-menu-info">1</div>
-                    <div class="menu header-menu-flight">2</div>
-                    <a href="#bottom"><div class="menu header-menu-contact">3</div></a>
+                    <a href="#pictures"><div class="menu header-menu-pictures">Pictures</div></a>
+                    <a href="#about-me"><div class="menu header-menu-2">About me</div></a>
+                    <a href="#bottom"><div class="menu header-menu-contact">Contact</div></a>
                     <div class="menu">4</div>
                     <div class="menu">5</div>
                     <div class="menu">6</div>
@@ -33,32 +33,34 @@
         <div id="body">
             <br/>
             <div class="middle-container">
-                <div class="flexbox-middle">
+                <div class="flexbox-middle" id="pictures">
                     <div class="box box1"><img src="Bilder/penguin1.jpg"></div>
                     <div class="box box2"><img src="Bilder/penguin2.jpg"></div>
                     <div class="box box3"><img src="Bilder/penguin3.jpg"></div>
                     <div class="box box4"><img src="Bilder/penguin4.jpg"></div>
-                    <!--<div class="box box5">5</div>
-                    <div class="box box6">6</div>
-                    <div class="box box7">7</div>
-                    <div class="box box8">8</div>
-                    <div class="box box9">9</div>-->
+                    <div class="box box5"><img src="Bilder/penguin5.jpg"></div>
+                    <div class="box box6"><img src="Bilder/penguin6.jpg"></div>
+                    <div class="box box7"><img src="Bilder/penguin7.jpg"></div>
+                    <div class="box box8"><img src="Bilder/penguin8.jpg"></div>
+                    <div class="box box9"><img src="Bilder/penguin9.jpg"></div>
                 </div>
+             <br/>
             </div>
-            <br/>
+        <div class="about-me" id="about-me">
+            <div class="about-me-header">Test</div>
+            <div class="about-me-text">test</div>
         </div>
         <div class="footer">
             <div class="footer-content">
 
                 <div class="footer-section about">
-                    <h1 class="logo-text"><span>text</span> text</h1>
+                    <h1 class="logo-text"><span>Contact</span> me</h1>
                     <p>
-                        text-----
+                        Feel free to contact me using:
                     </p>
                     <div class="contact">
-                        <span><i class="fas fa-phone"></i> &nbsp; test</span>
-                        <i class="fas fa-phone"></i>
-                        <span class="fas fa-email"></span>
+                        <span><i class="fab fa-facebook-square"></i> &nbsp; <a href="http://www.facebook.com/albertdrosphotography" target="_blank">Facebook</a></span><br/>
+                        <span class="fas fa-envelope-square">&nbsp; info@albertdros.com</span>
                     </div>
                 </div>
                 <div class="footer-section links"></div>
@@ -68,6 +70,7 @@
             <div class="footer-bottom" id="bottom">
                 <p>Made by Tanja and Vicke</p>
             </div>
+        </div>
         </div>
     </div>
 </body>
